testsuite/tests/parser/unicode/T18225B.stderr
T18225B.hs:11:23: Parse error in command: [| x |]
